--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
   "devDependencies": {
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.8",
-    "del-cli": "^4.0.1"
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "del-cli": "^4.0.1",
+    "typescript": "^4.5.5"
   },
   "dependencies": {
     "@babel/cli": "^7.16.8"
