--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "/dist"
   ],
   "scripts": {
-    "build": "del dist/* && tsc"
+    "build": "tsc"
   },
   "author": {
     "name": "Haider Ali Punjabi",
@@ -30,13 +30,9 @@
   "homepage": "https://github.com/haideralipunjabi/next-goatcounter",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.23.4",
-    "@babel/core": "^7.23.7",
-    "@babel/preset-env": "^7.23.8",
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
-    "del-cli": "^5.1.0",
     "typescript": "^5.3.3"
   },
   "funding": "https://buymeacoffee.com/HAliPunjabi",
@@ -45,8 +41,8 @@
     "url": "https://github.com/haideralipunjabi/next-goatcounter"
   },
   "peerDependencies": {
-    "next": ">=12.0.0",
-    "react": ">=17.0.0-0",
-    "react-dom": ">=17.0.0-0"
+    "next": ">14.0.0",
+    "react": ">18.0.0",
+    "react-dom": ">18.0.0"
   }
 }
